--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@clerk/express": "^1.7.14",
+    "@clerk/backend": "^2.25.1",
+    "@clerk/express": "^1.7.55",
     "@types/validator": "^13.15.2",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
